--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-import": "^2.2.0",
+    "lambda-local": "^1.4.2"
+  },
+  "scripts": {
+    "start": "lambda-local -l index.js -e event.json -t 200"
   }
 }
