--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.41.0",
+    "request-promise": "^4.2.0",
     "webdriverio": "^4.6.2"
   },
   "devDependencies": {
